<?xml version="1.0"?>
<package format="2">
  <name>avl_fault_detection</name>
  <version>1.0.0</version>
  <description>Package for code and configuration files for fault detection on the CMAR 690</description>
  <maintainer email="gwynethcs@vt.edu">Gwyneth Steel</maintainer>
  <license>TODO</license>

  <!-- Build Tool Dependency -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Documentation Dependency -->
  <doc_depend>doxygen</doc_depend>

  <!-- ROS Dependencies -->
  <depend>roscpp</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- Point Cloud Library -->
  <build_depend>pcl_ros</build_depend>
  <exec_depend>pcl_ros</exec_depend>

  <!-- External Dependencies -->
  <depend>yaml-cpp</depend>

  <!-- AVL Package Dependencies -->
  <depend>avl_asio</depend>
  <depend>avl_msgs</depend>
  <depend>avl_comms</depend>
  <depend>avl_control</depend>
  <depend>avl_core</depend>
  <depend>avl_devices</depend>
  <depend>avl_guidance</depend>
  <depend>avl_navigation</depend>
  
</package>
